fix: title align

--- a/src/page/global/sass/grid.sass
+++ b/src/page/global/sass/grid.sass
@@ -8,6 +8,7 @@
   flex-direction: column
 
 .narrow
+  width: 100%
   max-width: 700px
   margin-left: auto
   margin-right: auto
